# python_rest_api

./: docker-compose.yaml  pyproject.toml
src/python_rest_api/: helpers.py  main.py
src/python_rest_api/adapter/in/: user_read_repository.py
src/python_rest_api/model/: user.py
tests/: fixtures.py  test_user_read_repository.py
